[project]
name = "sps"
version = "0.0.1"
description = "A simple pub/sub messaging library"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"

[project.scripts]
sps-server = "sps.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"